# WIDUtility

./: .gitignore  CMakeLists.txt  buildfailfixes.md  journey.md  plan.md
src/: app.manifest  main.cpp
src/core/: Apps.cpp  Apps.h  ChangeQueue.cpp  ChangeQueue.h  Commands.cpp  Commands.h  Components.cpp  Components.h  Hive.cpp  Hive.h  Iso.cpp  Iso.h  PendingChange.h  Pipeline.cpp  Pipeline.h  Tweaks.cpp  Tweaks.h  Unattend.cpp  Unattend.h  Wim.cpp  Wim.h
src/gui/: MainWindow.cpp  MainWindow.h  ProgressWindow.cpp  ProgressWindow.h
src/util/: Log.cpp  Log.h  Paths.cpp  Paths.h  Process.cpp  Process.h
